# concurrentes

./: .gitignore  .rusty-hook.toml  README.md  index.html  main.js
.github/: labeler.yml  (+1 more)
TP1/: .dockerignore  Cargo.toml  Dockerfile  README.md
TP1/assets/: airlines.csv  less_requests.csv  requests.csv
TP1/config/: airlines.json  general.json  hotel.json
TP1/docs/: Enunciado.md
TP1/docs/img/diagrams/: Entity Diagram - Part I.drawio  Flow Diagram - Part I.drawio
TP1/img/: Diagrama de Actores - Parte II.drawio
TP1/src/: tests.rs
TP1/src/common/: hello.rs
TP1/src/lib/: airlines.rs  config.rs  dispatcher.rs  fetch.rs  hotel.rs  lib.rs  logger.rs  metrics_collector.rs  paths.rs  request.rs  request_handler.rs  utils.rs  webservice.rs
TP1/src/lib/actors/: airlines.rs  logger.rs  mod.rs  request.rs
TP1/src/lib/common/: config.rs  mod.rs  paths.rs  request.rs  utils.rs
TP1/src/lib/part1/: airlines.rs  dispatcher.rs  fetch.rs  hotel.rs  logger.rs  metrics_collector.rs  mod.rs  request_handler.rs  webservice.rs
TP1/src/lib/part2/: airlines.rs  config.rs  dispatcher.rs  errors.rs  fetch.rs  hotel.rs  logger.rs  metrics.rs  mod.rs  request.rs  request_handler.rs  routes.rs  state.rs  status_service.rs  tests.rs  webservice.rs
TP1/src/part1/: bar.rs  foo.rs  mod.rs
TP1/src/part2/: foo.rs
TP2/: .env  (+15 more)
TP2/services/alglobo/: Cargo.toml  Dockerfile  dummy.Cargo.toml  manual.Dockerfile
TP2/services/alglobo/src/: main.rs
TP2/services/alglobo/src/lib/: config.rs  constants.rs  control.rs  control_plane.rs  data_plane.rs  directory.rs  file_logger.rs  lib.rs  manual.rs  replica.rs  service.rs  service_directory.rs  thread_utils.rs  tx_log.rs  types.rs  utils.rs
TP2/services/alglobo/src/lib/config/: control.rs  data.rs  mod.rs  utils.rs
TP2/services/alglobo/src/lib/constant/: directory.rs  env.rs  errors.rs  leader_election.rs
(+134 files in other folders)
