[package]
name = "alglobo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }